<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_employee_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.marfin_fadhilah.devtest.core.ui.EmployeeInfoEditText
            android:id="@+id/info_item_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/employee_id"
            />

        <com.marfin_fadhilah.devtest.core.ui.EmployeeInfoEditText
            android:id="@+id/info_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/employee_name"
            />

        <com.marfin_fadhilah.devtest.core.ui.EmployeeInfoEditText
            android:id="@+id/info_item_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/employee_salary"
            />

        <com.marfin_fadhilah.devtest.core.ui.EmployeeInfoEditText
            android:id="@+id/info_item_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/employee_age"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_employee_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_employee_info"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textSize="12dp"
            android:background="@drawable/bg_corner_solid_radius_8dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textSize="12dp"
            android:background="@drawable/bg_corner_solid_radius_8dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>