<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@drawable/bg_black_border_1dp"
            android:hint="@string/employee_name"
            android:gravity="center"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:layout_marginTop="24dp"
            />

        <EditText
            android:id="@+id/edt_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@drawable/bg_black_border_1dp"
            android:hint="@string/employee_salary"
            android:gravity="center"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:layout_marginTop="24dp"
            />

        <EditText
            android:id="@+id/edt_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@drawable/bg_black_border_1dp"
            android:hint="@string/employee_age"
            android:gravity="center"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:layout_marginTop="24dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:background="@drawable/bg_corner_solid_radius_8dp"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_employee_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/show_all_employees"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:background="@color/blue_700"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>